[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.10.4"
tracing = "0.1"
thiserror = "1.0"
dashmap = "5.3.4"
http = "0.2"
snow = "0.9.0"

[dev-dependencies]
anyhow = "1.0"
async-prost = "0.4.0"
futures = "0.3"
tokio = { version = "1.20.0", features = ["full"] }
tracing-subscriber = "0.2.0"

[build-dependencies]
prost-build = "0.8"
