[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"
[[bin]]
name = "kvc"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.10.4"
tracing = "0.1"
thiserror = "1.0"
dashmap = "5.3.4"
http = "1.0.0"
snow = "0.9.0"
flate2 = "1.0.24"
anyhow = "1.0"
snowstorm = "0.4.0"
tokio = { version = "1.20.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
futures = "0.3"
tokio-util = { version = "0.7.3", features = ["compat", "codec"]}
yamux = "0.10.2"
tokio-rustls = "0.23.4"
rustls-pemfile = "1.0.1"
tokio-stream = "0.1.11"
s2n-quic = { version="1.32.0", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
s2n-quic-rustls = "0.32.0"
tracing-opentelemetry = "0.17"
opentelemetry-jaeger = "0.16"

[dev-dependencies]
async-prost = "0.4.0"

[build-dependencies]
prost-build = "0.12.3"
